fix: remove incorrect RTL CSS rule in globals.css
Remove erroneous CSS rule that misaligned text in LTR containers.

--- a/app/globals.css
+++ b/app/globals.css
@@ -305,9 +305,7 @@
   text-align: left;
 }
 
-[dir="ltr"] .text-left {
-  text-align: right;
-}
+
 
 /* RTL flex reversals */
 [dir="rtl"] .flex-row {
